# manga-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  settings.py  tox.ini
alembic/: env.py
alembic/versions/: 0_25f154669f23_create_user.py  2021_08_22__11_29_17508a7eb269_create_manga.py  2021_08_22__11_30_771e34c5502b_create_mangainfo.py  2021_08_22__11_31_c2587dc7c10f_create_mangaart.py  2021_08_22__11_32_a2f3c00ada16_rename_users_table.py  2021_08_22__11_33_aecd4516c41f_make_username_unique.py  2021_08_22__13_04_deec5fb628c9_.py  2021_08_27__09_13_827f487b3170_make_datetime_fields_non_nullable.py  2021_08_27__09_19_ebe62ac28358_create_manga_chapter.py  2021_08_27__09_20_1694021b577f_create_manga_pages.py  2021_08_27__09_22_8eec50ffdd33_make_manga_info_language_length_2.py  2021_08_27__21_46_8fcf58bec493_add_manga_id_col_to_manga_chapter.py  2021_08_28__13_15_262e0339da80_add_image_url_to_mangaart.py  2021_08_29__21_26_a3bab1ce971e_add_published_at_field_do_chapter.py  2021_08_31__19_03_128fdbf432b6_add_manga_likes.py  2021_09_04__03_50_57cd892b9447_add_authors_and_author_manga_.py  2021_09_07__13_00_8ac1229f6113_add_created_at_and_updated_at_to_user.py  2021_10_03__04_25_e5dcbbaff769_rename_page_imageulr_to_page_image_url.py  2021_10_17__15_33_6fc7326f6818_.py  2021_11_02__21_45_4cddcd937e3f_.py
app/: app.py  schema.py
db/: _fields.py  _mixins.py  base.py  dependencies.py  settings.py
db/mixins/: __init__.py  _datetime.py  _soft_delete.py
db/models/: __init__.py  users.py
db/models/manga/: __init__.py  art.py  author.py  chapters.py  info.py  likes.py  manga.py  pages.py
db/seeding/: __init__.py  artists.py  chapters.py  info.py  main.py  manga.py  pages.py
env/: .gitignore  auth.example.env  database.example.env
gql/: _loaders.py  app.py  cache.py  context.py  exceptions.py  extensions.py  loaders.py  mixins.py  root.py
gql/manga/: __init__.py
gql/manga/art/: __init__.py  loaders.py  types.py
gql/manga/authors/: __init__.py  loaders.py  types.py
gql/manga/chapters/: _fields.py  chapters.py  query.py  resolvers.py  root.py  types.py
gql/manga/info/: __init__.py  loaders.py  types.py
gql/manga/manga/: __init__.py  loaders.py  mutations.py  query.py  resolvers.py  root.py  types.py
gql/manga/pages/: loaders.py  types.py
gql/pagination/: pagination.py  types.py
gql/users/: __init__.py  auth.py  context.py  loaders.py  permissions.py  query.py  resolvers.py  root.py  types.py
modules/: exceptions.py
modules/auth/: dependencies.py  exceptions.py  router.py  schema.py  services.py  settings.py
modules/users/: exceptions.py  repositories.py  router.py  schema.py  services.py
tests/: conftest.py
tests/auth/: conftest.py  test_api.py  test_passwords.py
tests/db/: test_soft_delete.py
tests/graphql/: conftest.py  test_manga.py
tests/graphql/manga/: conftest.py  test_retrieve_by_title.py
tests/users/: conftest.py  test_api.py
